Got routing to senior create task/waiting activity set up. Fixed some photo issues. Added task details to the waiting activity.

--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="title_activity_show_task_details">ShowTaskDetailsActivity</string>
     <string name="Offer_to_do_this_task">Offer to do this task.</string>
     <string name="Posted_on">Posted on:\s</string>
+    <string name="Your_task_request">Your task request:</string>
 </resources>
