--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -66,5 +66,5 @@
     <string name="Send">Send</string>
     <string name="Say_something">Say something...</string>
     <string name="You_are_chatting_with">You are chatting with:</string>
-    <string name="Theres_no_internet_connection_right_now">There\'s no internet connection right now. Please try again after connecting to the internet.</string>
+    <string name="Theres_no_internet_connection_right_now">There\'s no internet connection right now.\nPlease try again after connecting to the internet.</string>
 </resources>
