Minor airplane mode changes.

--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Whippersnapper</string>
+    <string name="app_name">WhipperSnapper</string>
 
     <string-array name="taskTypes">
         <item>Outdoor, Gardening</item>
