DONE. Got the task address to display when the senior accepts the offer. Also added a default task photo if none was supplied.

--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="The_help_offer_for_this_task_has_been_accepted">The help offer for this task has been accepted. You can now close this chat room.</string>
     <string name="has_offered_to_do_this_task_for_you">\shas offered to do this task for you. Click to open chat."</string>
     <string name="You_have_declined">You have declined. You can now close this chat room.</string>
+    <string name="The_address_for_this_task_is">The address for this task is\s</string>
 </resources>
