Adding the demo.

--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="has_offered_to_do_this_task_for_you">\shas offered to do this task for you. Click to open chat."</string>
     <string name="You_have_declined">You have declined. You can now close this chat room.</string>
     <string name="The_address_for_this_task_is">The address for this task is\s</string>
+    <string name="Call">Call</string>
 </resources>
