Added debugging feature by getting fake phone number from a file. Added a call button to Chat activity. Added a font I'm going to use, and also change the UserTypePickerActivity to add the little avatar graphics.

--- a/WhipperSnapper/app/src/main/res/values/strings.xml
+++ b/WhipperSnapper/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
     <string name="You_have_declined">You have declined. You can now close this chat room.</string>
     <string name="The_address_for_this_task_is">The address for this task is\s</string>
     <string name="Call">Call</string>
+    <string name="title_activity___debug_fake_phone">_DebugFakePhoneActivity</string>
+
 </resources>
